--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -61,7 +61,7 @@
         android:layoutDirection="rtl"
         android:textAlignment="textStart"
         android:layout_gravity="start"
-        android:id="@+id/password_login"
+        android:id="@+id/textPassword_login"
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:inputType="textPassword"
@@ -89,7 +89,7 @@
         tools:ignore="OnClick" />
 
     <Button
-        android:id="@+id/signin"
+        android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
