onClick login page

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -85,14 +85,14 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        tools:ignore="OnClick" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
+        android:onClick="onClickRegister"
         android:backgroundTint="#5E00BCD4"
         android:text="הרשם"
         app:layout_constraintBottom_toBottomOf="parent"
