onClick home page

--- a/app/src/main/res/layout/home_citizen.xml
+++ b/app/src/main/res/layout/home_citizen.xml
@@ -15,6 +15,7 @@
         android:background="@drawable/round_button"
         android:fontFamily="@font/alef"
         android:gravity="center_vertical|center_horizontal"
+        android:onClick="openSettingsPage"
         android:text="עדכון פרטים"
         android:textColor="#fff"
         android:textSize="80px"
@@ -34,6 +35,7 @@
         android:fontFamily="@font/alef"
         android:gravity="center_vertical|center_horizontal"
         android:shadowColor="#000000"
+        android:onClick="openResultsPage"
         android:text="תוצאות האמת"
         android:textColor="#fff"
         android:textSize="60px"
@@ -52,6 +54,7 @@
         android:background="@drawable/round_button"
         android:fontFamily="@font/alef"
         android:gravity="center_vertical|center_horizontal"
+        android:onClick="openPropositionsPage"
         android:text="הצבע כאן!"
         android:textColor="#fff"
         android:textSize="90px"
