--- a/app/src/main/res/layout/home_parliament.xml
+++ b/app/src/main/res/layout/home_parliament.xml
@@ -15,6 +15,7 @@
         android:background="@drawable/round_button"
         android:fontFamily="@font/alef"
         android:gravity="center_vertical|center_horizontal"
+        android:onClick="openSettingsPage"
         android:text="החלף סיסמא"
         android:textColor="#fff"
         android:textSize="80px"
@@ -34,6 +35,7 @@
         android:fontFamily="@font/alef"
         android:gravity="center_vertical|center_horizontal"
         android:shadowColor="#000000"
+        android:onClick="openPropositionsPage"
         android:text="צפה בחוקים"
         android:textColor="#fff"
         android:textSize="50px"
@@ -52,6 +54,7 @@
         android:background="@drawable/round_button"
         android:fontFamily="@font/alef"
         android:gravity="center_vertical|center_horizontal"
+        android:onClick="openStatisticsPage"
         android:text="צפה בסטטיסטיקות"
         android:textColor="#fff"
         android:textSize="55px"
