--- a/app/src/main/res/layout/layout_home_page.xml
+++ b/app/src/main/res/layout/layout_home_page.xml
@@ -55,6 +55,7 @@
         android:id="@+id/logOut"
         android:layout_width="43dp"
         android:layout_height="38dp"
+        android:onClick="openLoginPage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.019"
@@ -68,6 +69,7 @@
         android:layout_width="43dp"
         android:layout_height="19dp"
         android:fontFamily="@font/alef"
+        android:onClick="openLoginPage"
         android:text="התנתק"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,6 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alef"
+        android:onClick="sendMail"
         android:text="צור קשר"
         android:textSize="16sp"
         android:textStyle="normal|bold|italic"
@@ -96,6 +99,7 @@
         android:id="@+id/connectUs"
         android:layout_width="37dp"
         android:layout_height="32dp"
+        android:onClick="sendMail"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.807"
