--- a/app/src/main/res/layout/layout_standard_page.xml
+++ b/app/src/main/res/layout/layout_standard_page.xml
@@ -9,6 +9,7 @@
         android:id="@+id/logo"
         android:layout_width="80dp"
         android:layout_height="56dp"
+        android:onClick="openHomePage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
