--- a/app/src/main/res/layout/layout_welcome_page.xml
+++ b/app/src/main/res/layout/layout_welcome_page.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F3E7C3">
+    android:background="#ECF6F2">
 
     <ImageView
         android:id="@+id/logo_welcome"
