Create new user in real time DB, in UserDetails class

--- a/app/src/main/res/layout/user_details.xml
+++ b/app/src/main/res/layout/user_details.xml
@@ -97,7 +97,7 @@
         android:id="@+id/User_year_of_birth"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:inputType="number|textPersonName"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
