--- a/app/src/main/res/layout/vote.xml
+++ b/app/src/main/res/layout/vote.xml
@@ -41,7 +41,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/alef"
-            android:text="בעד"
+            android:text="@string/pro"
             android:textSize="20sp" />
 
         <RadioButton
@@ -49,7 +49,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/alef"
-            android:text="נמנע"
+            android:text="@string/Noun"
             android:textSize="20sp" />
 
         <RadioButton
@@ -57,7 +57,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/alef"
-            android:text="נגד"
+            android:text="@string/Against"
             android:textSize="20sp" />
     </RadioGroup>
 
@@ -86,7 +86,7 @@
         android:layout_height="98dp"
         android:background="@drawable/back"
         android:fontFamily="@font/alef"
-        android:text="תיאור ופירוט"
+        android:text="@string/details"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textDirection="rtl"
@@ -104,7 +104,7 @@
         android:layout_width="231dp"
         android:layout_height="47dp"
         android:fontFamily="@font/alef"
-        android:text="עד כמה חוק זה חשוב לך?"
+        android:text="@string/rateTheVote"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textDirection="rtl"
@@ -121,7 +121,7 @@
         android:id="@+id/sendVote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="שלח"
+        android:text="@string/send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.077"
