--- a/app/src/main/res/layout/vote.xml
+++ b/app/src/main/res/layout/vote.xml
@@ -12,8 +12,8 @@
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layoutDirection="rtl"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,23 +24,22 @@
 
     <RadioGroup
         android:id="@+id/radiobtns"
-        android:layout_width="339dp"
+        android:layout_width="300dp"
         android:layout_height="56dp"
         android:layout_gravity="start"
+        android:checkedButton="@+id/impossible"
         android:layoutDirection="rtl"
         android:orientation="horizontal"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4"
-        android:checkedButton="@+id/impossible">
+        app:layout_constraintVertical_bias="0.4">
 
         <RadioButton
             android:id="@+id/agreement"
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/alef"
             android:text="@string/pro"
@@ -48,7 +47,7 @@
 
         <RadioButton
             android:id="@+id/impossible"
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/alef"
             android:text="@string/impossible"
@@ -56,7 +55,7 @@
 
         <RadioButton
             android:id="@+id/against"
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/alef"
             android:text="@string/Against"
@@ -70,6 +69,7 @@
         android:layout_height="46dp"
         android:background="@drawable/back"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textDirection="rtl"
@@ -77,7 +77,7 @@
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.68"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.128" />
@@ -88,6 +88,7 @@
         android:layout_height="98dp"
         android:background="@drawable/back"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:text="@string/details"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -96,7 +97,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.68"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.238" />
@@ -106,6 +107,7 @@
         android:layout_width="231dp"
         android:layout_height="47dp"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:text="@string/rateTheVote"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -114,7 +116,7 @@
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.733"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.502" />
@@ -123,26 +125,15 @@
         android:id="@+id/sendVote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layoutDirection="rtl"
         android:onClick="onClickSend"
         android:text="@string/send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.077"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.688"
         tools:ignore="OnClick" />
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="80dp"
-        android:layout_height="56dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
