--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -2,25 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:orientation="horizontal"
-    android:layoutDirection="rtl">
+    android:layoutDirection="rtl"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/itemTextView"
         android:layout_width="260dp"
         android:layout_height="70dp"
-        android:textSize="24sp"
-        android:textDirection="rtl"
         android:layoutDirection="rtl"
-       />
+        android:singleLine="true"
+        android:textDirection="rtl"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/button_vote"
         android:layout_width="80dp"
         android:layout_height="50dp"
-        android:text="הצבע"
-        android:textDirection="rtl"
         android:layoutDirection="rtl"
-        android:onClick="openVotePage"/>
+        android:onClick="openVotePage"
+        android:text="הצבע"
+        android:textDirection="rtl" />
 
 </LinearLayout>
