--- a/app/src/main/res/layout/propositions.xml
+++ b/app/src/main/res/layout/propositions.xml
@@ -10,12 +10,13 @@
 
     <ScrollView
         android:layout_width="345dp"
-        android:layout_height="635dp"
+        android:layout_height="600dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.64">
+        app:layout_constraintVertical_bias="0.7"
+        android:layoutDirection="rtl">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,8 +25,8 @@
 
             <ListView
                 android:id="@+id/listView"
-                android:layout_width="355dp"
-                android:layout_height="635dp" />
+                android:layout_width="340dp"
+                android:layout_height="600dp" />
         </LinearLayout>
 
 
